--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
   </head>
   <body>
     <nav class="navitem">
-      <button class="btn" id="about-me">About me</button>
+      <button class="btn" onclick="typeWriter()" id="about-me">About me</button>
       <button class="btn" id="education">Education</button>
       <button class="btn" id="personal-info">personal information</button>
     </nav>
     <main>
       <section class="hide about-me">
-        <p>
-          Hi, I'm Sergo, I started learning programming a year ago and today
-          I've already studied: HTML, CSS, JS, Angular, Github, Bootstrap, SQL,
-          QA Testing and Postman. I am motivated by deepening existing knowledge
-          and acquiring new skills.
-        </p>
+        <p id="typing"></p>
         <button class="close close1">close</button>
       </section>
       <section class="hide education">
