--- a/index.html
+++ b/index.html
@@ -36,14 +36,25 @@
         <p>Legal address: Gori district, village kveshi</p>
         <button class="close close3">close</button>
       </section>
-      <section class="contact">
+      <!-- <section class="contact">
         <p>
           mail:
-          <a href="#">smuradash1@gmail.com</a>
+          <a href="https://mail.google.com/mail/u/0/#inbox"
+            >smuradash1@gmail.com</a
+          >
         </p>
         <p>phone: <span>568-88-41-35</span></p>
-      </section>
+      </section> -->
     </main>
+    <footer>
+      <p>phone: <span>568-88-41-35</span></p>
+      <p>
+        mail:
+        <a href="https://mail.google.com/mail/u/0/#inbox"
+          >smuradash1@gmail.com</a
+        >
+      </p>
+    </footer>
     <script src="./main.js"></script>
   </body>
 </html>
